--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -228,10 +228,7 @@
 
   h2 {
     font-size: 1.875em;
-    max-width: var($homepage, smaller-max-width);
-    // margin-left: auto;
-    // margin-right: auto;
-    // max-width: 960px;
+    max-width: 960px;
   }
 }
 
@@ -240,20 +237,15 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0;
-  margin-top: 1.875rem;
-  max-width: var($homepage, smaller-max-width);
+  margin-top: 1.25rem;
   padding-inline-start: 0;
-  // margin-left: auto;
-  // margin-right: auto;
-  // margin-top: 30px;
-  // max-width: 960px;
+  max-width: 960px;
 }
 
 .how-button {
   flex: 1 1 0;
   align-items: center;
   border-left: 4px solid color('cyan-30v');
-  // border-left: 4px solid color('cyan-30v');
   display: flex;
   padding-left: 12px;
   padding-right: 20px;
@@ -286,11 +278,6 @@
   @include u-bg('blue-80v');
 }
 
-/* Life Events */
-.life-events-intro {
-  padding-left: 58px;
-}
-
 /* All Topics Header */
 .all-topics-header {
   @include u-bg('white');
@@ -304,10 +291,9 @@
     font-size: 2.44em;
     //uswds font-weight mixin
     @include u-text('bold');
-    margin: 65px auto 0;
-    max-width: var($homepage, larger-max-width);
-    padding: 0;
-    padding-bottom: 5px;
+    margin: 65px 5vw 0;
+    max-width: 1124px;
+    padding: 0 0 5px 0;
     text-align: left;
   }
 }
@@ -325,15 +311,13 @@
 /* All Topics Cards */
 .all-topics-background {
   background-color: $homepage-light-blue-background;
-  padding-bottom: 100px;
-  padding-top: 20px;
+  padding: 20px 5vw 100px;
 }
 
 .smaller-width-div {
   margin-left: auto;
   margin-right: auto;
-  max-width: var($homepage, larger-max-width);
-  // max-width: 960px;
+  max-width: 1124px;
 }
 
 .homepage-card-group {
@@ -384,14 +368,11 @@
   p {
     @include u-text('gray-90');
     @include u-font-family('sans');
-    font-size: var($homepage, small-font-size);
-    // font-size: 1.038em;
-    // text-align: center;
-    // padding: 0 10px;
+    font-size: 1.038em;
   }
 
   h2 {
-    //uswds font-weight mixin
+    // uswds font-weight mixin
     @include u-text('bold');
     line-height: 1.3;
   }
@@ -422,7 +403,7 @@
   overflow: hidden;
 }
 
-/* Larger Mobile */
+/* Mobile devices */
 @media (min-width: 480px) {
 
   .how-box {
@@ -435,117 +416,49 @@
 
   .how-button-list {
     flex-flow: row wrap;
-    margin-top: 20px;
   }
 
   .how-button {
     flex: 1 1 50%;
   }
 
-  .life-events h2 {
-    padding-top: 20px;
-  }
-
-  // .all-topics-header h2 {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   max-width: 1024px;
-  //   padding: 0 0 5px 75px;
-  // }
-
-  .homepage-card_header {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .homepage-card-group {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 275px));
-  }
 }
 
-/* Tablet & Desktop */
-@media (min-width: 700px) {
-
-  .how-box {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    max-width: 1024px;
-    width: 100%;
-    padding-top: 18px;
-  }
-
-  .life-events h2 {
-    padding-top: 20px;
-  }
-
-  // .all-topics-header h2 {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   max-width: 1024px;
-  //   padding: 0 0 5px 75px;
-  // }
-
-  .homepage-card_header {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .homepage-card-group {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 275px));
-  }
-}
-
-/* Tablet */
-@media (max-width: 700px) and (min-width: 480px) {
-  .how-button-list {
-    margin-top: 30px;
-  }
-
+/* Desktops, large screens */
+@media (min-width: 1024px) {
   .how-button {
-    margin-bottom: 15px;
+    flex: 1 1 0%;
+    min-height: 60px;
+  }
+
+  /* Life Events */
+  .life-events-intro {
+    padding-left: 58px;
+  }
+
+  .all-topics-header h2 {
+    margin: 65px 5vw 0;
+    padding-left: 58px;
   }
 }
 
-/* Desktop */
+/* Extra large screens */
 @media (min-width: 1200px) {
   .life-events {
     margin-left: auto;
     margin-right: auto;
-    width: var($homepage, larger-max-width);
-    // max-width: 1024px;
+    max-width: 1124px;
     padding: 0;
   }
 
-  .life-events-intro {
-    margin-left: 0;
+  .all-topics-header h2 {
+    margin-left: auto;
     margin-right: auto;
-    max-width: var($homepage, smaller-max-width);
-    // max-width: 960px;
-    // padding: 0 0 0 75px;
+    padding-left: 0;
   }
 
   .how-button-list {
     flex-wrap: nowrap;
   }
 
-  .how-button {
-    flex: 1 1 0%;
-    min-height: 60px;
-  }
-}
-
-/* All topics 3 cards */
-@media (max-width: 1199px) {
-  .smaller-width-div {
-    margin-left: 5vw;
-    margin-right: 5vw;
-  }
-
-  .all-topics-header h2 {
-    max-width: var($homepage, smaller-max-width);
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 58px;
-  }
 }
